# algo-arena

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README  README.md  gen.cpp
01-basic-ds/: P1160_2.in  P1160_2.out  P1160_3.out  P3378_4.out  a.out  hdu_1003.cpp  hdu_1710.cpp  hdu_2527.cpp  luogu_1030.cpp  luogu_1087.cpp  luogu_1090.cpp  luogu_1168.cpp  luogu_1175.cpp  luogu_1229.cpp  luogu_1305.cpp  luogu_1449.cpp  luogu_1540.cpp  luogu_1725.cpp  luogu_1739.cpp  luogu_1981.cpp  luogu_1996.cpp  luogu_2032.cpp  luogu_2168.cpp  luogu_5018.cpp
02-basic-algs/: Makefile  P1462_1.in  P1462_1.out  P1462_2.in  P1462_2.out  P1816_1.in  P2678_1.in  _cmp.sh  _create.sh  _test.sh  a.out  bd202302.cpp  count.py  hdu_3400.cpp  hdu_5358.cmp.in  hdu_5358.cpp  hdu_5358.in  hdu_5358_ac.cpp  hdu_5358_bad.cpp  hdu_5358_gen.cpp  in.txt  luogu_1182.cpp  luogu_1198.cpp  luogu_1198.in  luogu_1462.cpp  luogu_1462.in  luogu_1816.cpp  luogu_1883.cpp  luogu_2678.cpp  luogu_3865.cpp  luogu_4155.cpp  poj_3061.cpp  poj_3122.cpp  poj_3263.cpp  tmp.txt  uva_11572.cpp  uva_11572.in
04-advanced-ds/: fenwick.cpp  luogu_3372.cpp
05-dp/: a.out  hdu_2602.cpp  luogu_1048.cpp
10-graph/: luogu_3366_prim.cpp
algs-luo&guo/01-basic-ds/: luogu_1229.cpp  luogu_1305.cpp  (+7 more)
benchmarks/: CMakeLists.txt
benchmarks/string/: reverse.cpp
leetcode/: 141_142.cpp  146_LRU.cpp  15.cpp  19.cpp  236.cpp  84.cpp  876.cpp  offer_22.cpp  offer_31.cpp  offer_58.cpp
pta/: pta1001.cpp  pta1002.cpp  pta1007.cpp
scripts/: addprefix.sh  changeprefix.sh
shell/: 192-统计词频.sh
(+548 files in other folders)
